syntax = "proto3";

package pb;

option go_package = "./pb";

// Message สำหรับรับส่งข้อมูล
message DataRequest {
  string id = 1;
}

message DataResponse {
  string result = 1;
  string from_service = 2;
}

// Domain Service (gRPC)
service DomainService {
  rpc GetData (DataRequest) returns (DataResponse);
}

// Orchestrator Service (gRPC)
service OrchestratorService {
  rpc ProcessData (DataRequest) returns (DataResponse);
}
